[package]
name = "color-tracking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
derive_more = "0.99.17"
eframe = "0.21.3"
egui_extras = { version = "0.21.0", features = ["image"] }
glob = "0.3.1"
image = "0.24.5"
imageproc = "0.23.0"
